# cmake_proj_structure

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.c  main.h
src/common/: CMakeLists.txt  macros.h  pins.h  slate.h  state_machine.h
src/common/error/: CMakeLists.txt  error.c  error.h
src/scheduler/: CMakeLists.txt  scheduler.c  scheduler.h
src/states/init/: CMakeLists.txt  init.c  init.h
src/tasks/print/: CMakeLists.txt  print.c  print.h
src/tasks/print/test/: CMakeLists.txt  print_test.h
